chapter-5/exercise-4.1/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ping-app-route
spec:
  parentRefs:
    - name: ping-app-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /pingpong
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: ping-app-svc
          port: 2346
